change position to 'fixed' to remain visible when scrolling

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,5 +1,5 @@
 .navbar {
-  position: absolute;
+  position: fixed;
   z-index: 2;
   color: #ffffff;
   background-color: #4056A1;
